# nanbeige4.1vsGPT-4o

./: .gitignore  JUDGE_PROMPT.txt  README.md  api_keys.py  generate_gpt4o_answers.py  generate_llama_answers.py  generate_nanbeige_answers.py  judge_gpt4o_vs_qwen4b.py  llama-key.txt.example  main.py  make_judgment_pdf_report.py  openrouter-key.txt.example  plot_experiment_summary.py  plot_qwen_winrate_by_difficulty.py  pyproject.toml  to_json.py
