[project]
name = "nanbeige4-1vsgpt-4o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "reportlab>=4.4.10",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
